[project]
name = "audio-sync-api"
version = "0.1.0"
description = "Audio synchronization API using cross-correlation analysis"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.3.3",
    "librosa>=0.10.1",
    "numpy>=1.24.3",
    "scipy>=1.11.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["audio_sync.py", "app.py"]
